--- a/package.json
+++ b/package.json
@@ -5,25 +5,25 @@
 	"packageManager": "pnpm@10.20.0",
 	"scripts": {
 		"start": "node --env-file-if-exists=.env src/index.ts",
-		"model": "node --env-file-if-exists=.env src/scripts/model.ts"
+		"model": "node --env-file-if-exists=.env src/scripts/model.ts",
+		"check": "biome check"
 	},
 	"dependencies": {
+		"@huggingface/jinja": "^0.5.1",
 		"@libsql/client": "^0.15.15",
-		"ajv": "^8.17.1",
 		"discord.js": "^14.24.2",
 		"drizzle-orm": "^0.44.7",
-		"node-llama-cpp": "^3.14.2",
+		"openai": "^6.8.1",
+		"temporal-polyfill": "^0.3.0",
+		"yaml": "^2.8.1",
 		"zod": "^4.1.12"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.4",
-		"@huggingface/hub": "^2.6.12",
 		"@tsconfig/node-ts": "*",
 		"@tsconfig/node24": "*",
 		"@types/node": "^24.3.0",
-		"bytes": "^3.1.2",
 		"drizzle-kit": "^0.31.6",
-		"ora": "^9.0.0",
 		"typescript": "~5.9.3"
 	},
 	"engines": {
